# MDS

./: .gitignore  2009 LOB Check.ipynb  DHF-LAB3-AMRI-CHIBA-JAMAL.ipynb  DHF-LAB4-AMRI-CHIBA-JAMAL.ipynb  DHF-LAB5-AMRI-CHIBA-JAMAL.ipynb  DHF-LAB6-AMRI-CHIBA-JAMAL.ipynb  DHF-Lab5-AMRI-CHIBA-JAMAL.ipynb  README.md  preprocess.py  pyproject.toml  queue_resume_chain.sh  requirements.txt  run.py  slurm-1523.out  submit_test_inference_cache.sh  submit_test_threshold_sweep.sh  submit_testing.sh  submit_training.sh  test.ipynb  test.py  test_inference_cache.py  test_threshold_sweep.py  train.py  training.py
4. lab/: Lab4.tex
HFD/: DHF-LAB2-AMRI-CHIBA-JAMAL.ipynb  DHF-LAB4-AMRI-CHIBA-JAMAL.ipynb
PDMM/: .gitignore  machine_learning.py  pipeline.py  visualization.py
Presentations/: SoutenanceIntermediaire-2_20260216.tex  bibliography.bib
Probabilistic Detection of Market Manipulation/: README.md
RL-project/: .gitignore  README.md  requirements.txt
TD3/: L3_JAMAL_MARTINI.ipynb
TP2.2/: TP2.2.ipynb
TP3/: TP3.ipynb
TP3.2/: TP3.2.ipynb
TP4/: TP4.ipynb
TP5/: TP5.ipynb
conf/: evaluate.yaml  test.yaml  train.yaml
config/: default.yaml
deliverables/: 20260414_SoutenanceFinale.tex  bibliography.bib  report.tex
detection/: base.py  pipeline.py
models/: TOTF_sequential_prae_results.json
notebooks/: 1. training.ipynb  2009 LOB Check.ipynb  2a. model analysis - Transformer OC-SVM.ipynb  2b. model analysis - PNN.ipynb  2c. model analysis - PRAE.ipynb  3. Training - Sequential.ipynb  3. testing.ipynb  4. Analysis - Sequential.ipynb  4. sensitivity analysis.ipynb  (+5 more)
(+198 files in other folders)
